5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1644_869.log
== TEST (2019-04-09 17:14:17) 
-- CODE:
preco= float(input("Preco Inicial: "))

if (preco >= 200.00):
	print(preco-5/100)
	
	

-- OUTPUT:
200.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:15:01) 
-- CODE:
preco= float(input("Preco Inicial: "))

if (preco >= 200.00):
	print(preco - (preco-5/100))
	
	

-- OUTPUT:
0.05000000000001137
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:18:37) 
-- CODE:
preco= float(input("Preco Inicial: "))

if (preco >= 200.00):
	print(preco - (preco/(5%100))
	
	

-- EXECUTION TIME:
0.196529
-- ERROR:
  File "/home/codebench/codes/1644/869/main.py", line 7
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:18:39) 
-- CODE:
preco= float(input("Preco Inicial: "))

if (preco >= 200.00):
	print(preco - (preco/(5%100))
	
	

-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:25:28) 
-- CODE:
preco= float(input("Preco Inicial: "))

if (preco >= 200.00):
	print(round(preco - 5/100), 2)
	

	
	
	

-- OUTPUT:
200 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:26:40) 
-- CODE:
preco= float(input("Preco Inicial: "))

if (preco >= 200.00):
	print(round(preco - (preco - 5/100))
	

	
	
	

-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:26:54) 
-- CODE:
preco= float(input("Preco Inicial: "))

if (preco >= 200.00):
	print(round(preco - (preco - 5/100))
	

	
	
	

-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:27:06) 
-- CODE:
preco= float(input("Preco Inicial: "))

if (preco >= 200.00):
	print(round(preco - (preco - 5/100))
	

	
	
	

-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:27:30) 
-- CODE:
preco= float(input("Preco Inicial: "))

if (preco >= 200.00):
	print(round(preco - (preco - 5/100) ,2)
	

	
	
	

-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:28:25) 
-- CODE:
preco= float(input("Preco Inicial: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
	

	
	
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:28:35) 
-- CODE:
preco= float(input("Preco Inicial: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
	

	
	
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:28:43) 
-- CODE:
preco= float(input("Preco Inicial: "))

if (preco >= 200.00):
	preco = preco * 0.95
	print(round(preco, 2))
	

	
	
	

-- EXECUTION TIME:
0.173687
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
